Changing Z-Index to 400 to fix sticky menu

--- a/web/themes/custom/accesstheme/scss/style.scss
+++ b/web/themes/custom/accesstheme/scss/style.scss
@@ -1336,6 +1336,6 @@ ul.sf-menu {
   text-decoration-thickness: 2px;
   color: #781346;
 }
-.pegasus.sticky {
-  z-index: auto;
+.pegasus.sticky-top {
+  z-index: 400;
 }
